--- a/dentaku/index.html
+++ b/dentaku/index.html
@@ -61,6 +61,7 @@
         </tr>
       </table>
     </form>
+    <dir id="output" val="計算結果">計算結果</dir>
   </div>
 
   <script src="app.js"></script>
