--- a/bingo/index.html
+++ b/bingo/index.html
@@ -26,8 +26,7 @@
 <body>
     <div class="container">
         <div>
-            <div class="panel" id="panel1">︎</div>
-            <div class="panel" id="panel10">︎</div>
+            <div class="panel" id="panelNum">︎33</div>
         </div>
         <div class="btn inactive" id="btn0">STOP</div>
         </div>
@@ -38,16 +37,11 @@
         <div></br></br>
             <div class="copy">By ＠Takahashi</a>, Thanks to @Ishi </div>
         </div>
-        <audio id="audio_drum" src="audio/drumroll.wav"></audio>
-        <audio id="audio_cymbal" src="audio/cymbal.wav"></audio>
     </div>
 
     <script src="app.js"></script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="jquery/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="js/Bingo.js"></script>
 </body>
 
 </html>
