[add]:大体の動作実装完了

--- a/bingo/index.html
+++ b/bingo/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container">
         <div>
-            <div class="panel" id="panelNum">︎33</div>
+            <div class="panel" id="panelNum">0</div>
         </div>
         <div class="btn inactive" id="btn0">STOP</div>
         </div>
